fixed overflow

--- a/static/css/regex_matcher.css
+++ b/static/css/regex_matcher.css
@@ -32,11 +32,13 @@ body {
     margin-right: 10px;
     width: calc(100% - 40px); /* Adjust width to allow for margin */
     height: 11vh;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border: none;
     padding: 10px;
     color: white;
     outline: none;
-    background:rgb(22, 22, 21);
+    background:rgb(35,35,35);
     margin-top: 10px;
   }
   
@@ -45,11 +47,13 @@ body {
     margin-left: 10px;
     width: calc(100% - 40px); /* Adjust width to allow for margin */
     height: 49vh;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border: none;
     padding: 10px;
     color: white;
     outline: none;
-    background:rgb(22, 22, 21);
+    background:rgb(35, 35, 35);
     margin-top: 10px;
 }
   .left-section {
@@ -62,16 +66,24 @@ body {
 .left-section .card-regex {
     width: 100%;
     height: 20vh;
+    min-height: 20vh;
 }
 
 .left-section .card-test {
     width: 100%;
     height: 58vh;
+    min-height: 58vh;
+}
+
+textarea {
+    resize: none; /* Disable resizing */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
 
 .card, .card-test, .card-regex{
     width: 100%;
-    height: 80vh;
+    height: auto;
     background: #15001f;
     border: 1px solid #c042ff;
     font-size: 14px;
@@ -176,3 +188,7 @@ body {
   .s6 {
     color: #ffff00;
   }
+
+.results { 
+  padding-left: 10px;
+}
